@@ -1,2 +1,3 @@
 - Fixed the Gravity Perks Nested Forms Add-On integration not delaying the workflow for child entries created before the parent form is submitted.
-- Fix conditional assignee routing using the post category field.
+- Fixed an issue where Conditional Routing based on what values a Multiuser field contains could lead to extra users being set as step assignees.
+- Fixed conditional assignee routing using the post category field.
